34) Add asus rt-g32 full support<br>
35) Fix part table in SPI and nand flash types<br>
36) pppd up to current git src 24 Aug 2010<br>
37) xl2tpd up to 1.2.7 version<br>
38) Fix conntrack flush<br>
39) Wireless pages split and optimize<br>
40) VPN page add auth type select<br>
41) Fix trunclate nvram values at aplly change and device mode select<br>
42) Fix restart nvram_daemon<br>
43) Kernel fix lock in mtdchar, more small fixes and cleanups<br>
44) Fix keep mac adresses at push reset button<br>
45) libnvram use mtdblock instead mtdchar for write/read function<br>
46) Fix unlocked kernel write to mtd. Use kernel_lock for fix concurrent write issue<br>
47) Some scripts rewrite<br>
48) nvram_daemon and gpio utility no more needed<br>
49) Add backup nvram to rwfs logic add<br>
50) Rewrite logic in libnvram and goahead for correct nvram init/close<br>
51) More optimization init logic and cleanup goahead code<br>
52) Fix renew ip from dhcp at profile activate<br>
53) New logic for corbina workaround<br>
54) Samba fixup to correct build new gcc and others<br>
55) Some kernel backports and fix needed for correct wifi drivers work<br>
56) Fix radvd skipping multiple interfaces when UnicastOnly is on or AdvSendAdvert is off<br>
57) Update pppd from git<br>
58) Fix gen_wifi config<br>
59) Fix 40Mhz mode in eth converter mode select<br>
60) Tune wifi modes for speedup<br>
61) Fix memory alloc in wifi driver<br>
62) Fix some errors on libnvram<br>
63) Fix init gpio for leds and button at wps mode enabled<br>
64) Some cleanups and review kernel code to fix potentional errors<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>
